| Bug #57087 | ndb(mt)d printout about "Failed to create directory" during restart | ||
|---|---|---|---|
| Submitted: | 29 Sep 2010 7:46 | Modified: | 29 Sep 2010 12:07 |
| Reporter: | Magnus Blåudd | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 7.0.18 | OS: | Any |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
[29 Sep 2010 7:46]
Magnus Blåudd
[29 Sep 2010 7:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/119344
[29 Sep 2010 8:37]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.47-ndb-7.0.19 (revid:magnus.blaudd@sun.com-20100929075414-fal7s8ej53qsetul) (version source revid:magnus.blaudd@sun.com-20100929075414-fal7s8ej53qsetul) (merge vers: 5.1.47-ndb-7.0.19) (pib:21)
[29 Sep 2010 9:04]
Magnus Blåudd
and 7.1.8
[29 Sep 2010 12:07]
Jon Stephens
Documented bugfix in the NDB-7.019 and 7.1.8 changelogs as follows:
At startup, an ndbd or ndbmtd process creates directories for
its filesystem without checking to see whether they already
exist. Portability code added in MySQL Cluster NDB 7.0.18 and
MySQL Cluster NDB 7.1.7 did not account for this fact, printing
a spurious error message when a directory to be created already
existed. This unneeded printout has been removed.
Closed.
