Bug#57087 ndb(mt)d printout about "Failed to create directory" during restart  - Use ignore_existing flag for NdbDir::create  so it don't print the error message   when directory already exists.  - Add ending new line to the error messages